# typelerate

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release-please.yml
.reuse/: dep5
contrib/: generate-emoji.py  generate-python.py  generate-test.py
src/: cli.rs  config.rs  context.rs  main.rs  scores.rs  strings.rs
src/common/: fileextensions.rs  mod.rs
src/tui/: components.rs  events.rs  filechooser.rs  game.rs  gamewrapper.rs  help.rs  mod.rs  namechooser.rs  nodatafilepopup.rs  terminal.rs  wordfilechooser.rs
src/ui/: events.rs  filechooser.rs  game.rs  gamewrapper.rs  mod.rs  nodatafilepopup.rs  terminal.rs  wordfilechooser.rs
wordfiles/: gemoji_0.txt  gemoji_1.txt  gemoji_2.txt  gemoji_3.txt  gemoji_4.txt  gemoji_5.txt  gemoji_6.txt  gemoji_7.txt  gemoji_8.txt  python_keywords_stdlib.txt  rust_keywords_stdlib.txt  test.txt
