# SPDX-FileCopyrightText: 2023 Birger Schacht <birger@rantanplan.org>
# SPDX-License-Identifier: MIT

[package]
name = "typelerate"
version = "0.1.0"
authors = ["Birger Schacht <birger@rantanplan.org>"]
edition = "2021"
license = "MIT"
description = "Words fly accross the screen. Make them disappear before the reach the other side!"
repository = "https://github.com/b1rger/typelerate"
keywords = ["cli", "game", "console"]
categories = ["command-line-utilities", "games"]
include = ["/wordfiles"]


[dependencies]
anyhow = "1.0.72"
ratatui = "0.22.0"
crossterm = "0.26"
rand = "0.8.5"
serde = { version = "1.0.182", features = ["derive"] }
toml = { version = "0.7.6", default-features = false, features = ["parse"] }
xdg = "2.5.2"
clap = { version = "4.3.19", features = ["derive"] }
csv = "1.2.2"

[features]
devel = []
