# SPDX-FileCopyrightText: 2023 Birger Schacht <birger@rantanplan.org>
# SPDX-License-Identifier: MIT

[package]
name = "typelerate"
version = "0.1.0-alpha.1"
authors = ["Birger Schacht <birger@rantanplan.org>"]
edition = "2021"
license = "MIT"
description = "Words fly accross the screen. Make them disappear before the reach the other side!"
repository = "https://github.com/b1rger/typelerate"
keywords = ["cli", "game", "console"]
categories = ["command-line-utilities", "games"]


[dependencies]
ratatui = "0.22.0"
crossterm = "0.27"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.8"
xdg = "2.5.2"
clap = { version = "4.4.3", features = ["derive"] }
csv = "1.3.0"

[features]
devel = []
